maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
    keephandonsidewall()
   
  }
  prendBiscuit
}
def keehandonsidewall(){
  while(!estFaceMur){
    avance()
    if(estFaceMur){
      droite()
    }
  }
}